--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -13,7 +13,61 @@ body{
 header{
     width: 100%;
     text-align: center;
+    padding: 5pt;
     h1,h2{padding: 5pt}
     h1{font-size: 36pt; color: rgb(26, 27, 97);}
     h2{font-size: 18pt}
+}
+
+main{
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 5pt;
+    section{
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    form{
+        width: 50%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        padding: 15pt;
+        header{
+            text-align: left;
+            font-size: 14pt;
+            padding: 5pt 0;
+        }
+        label{
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            align-items: left;
+            justify-content: center;
+            padding: 5pt 0;
+            input{
+                font-family: sans-serif;
+                font-size: 12pt;
+                padding: 5pt;
+            }
+        }
+        button{
+            width: 100%;
+            color: #fff;
+            background: #000;
+            padding: 5pt;
+            font-size: 12pt;
+            font-family: 'Bebas Neue', cursive;
+            letter-spacing: 0.16pt;
+            border: none;
+            -webkit-appearance: none;
+            cursor: pointer;
+        }
+    }
 }
