--- a/public/style.css
+++ b/public/style.css
@@ -13,6 +13,7 @@ body {
 header {
   width: 100%;
   text-align: center;
+  padding: 5pt;
 }
 
 header h1, header h2 {
@@ -26,4 +27,96 @@ header h1 {
 
 header h2 {
   font-size: 18pt;
+}
+
+main {
+  width: 100vw;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 5pt;
+}
+
+main section {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+main form {
+  width: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 15pt;
+}
+
+main form header {
+  text-align: left;
+  font-size: 14pt;
+  padding: 5pt 0;
+}
+
+main form label {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: left;
+      -ms-flex-align: left;
+          align-items: left;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 5pt 0;
+}
+
+main form label input {
+  font-family: sans-serif;
+  font-size: 12pt;
+  padding: 5pt;
+}
+
+main form button {
+  width: 100%;
+  color: #fff;
+  background: #000;
+  padding: 5pt;
+  font-size: 12pt;
+  font-family: 'Bebas Neue', cursive;
+  letter-spacing: 0.16pt;
+  border: none;
+  -webkit-appearance: none;
+  cursor: pointer;
 }
