--- a/views/index.html
+++ b/views/index.html
@@ -27,7 +27,7 @@
                 <header>Log an Exercise</header>
                 <label>
                     <span>User ID</span>
-                    <input type="text" name="userID" />
+                    <input type="text" name="userId" />
                 </label>
                 <label>
                     <span>Exercise</span>
